Fix inverted map pin dark mode colors (#1748)

--- a/sitemedia/scss/pages/_places.scss
+++ b/sitemedia/scss/pages/_places.scss
@@ -91,8 +91,8 @@ main.places {
             }
             &.selected-place {
                 filter: drop-shadow(0px 1px 3px rgba(0, 0, 0, 0.33));
-                color: var(--primary);
-                fill: var(--tertiary);
+                color: var(--map-pin-primary);
+                fill: var(--map-pin-secondary);
                 width: 33px;
                 height: 42px;
                 &:has(.region) {
